replace test image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div id="canvas-container">
 			<canvas id="game-canvas" width="1000" height="600">Your browser does not support HTML5.</canvas>
 		</div>
-		<img id="background-img" src="res/howifeel.png">
+		<img id="background-img" src="res/bg.png">
 		<br/>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="js/globals.js"></script>
