Factor out Paddle from Player and Opponent.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 		<br/>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="js/globals.js"></script>
-		<script src="js/ball.js"></script>
-		<script src="js/paddle.js"></script>
-		<script src="js/opponent.js"></script>
-		<script src="js/collisions.js"></script>
-		<script src="js/pausing.js"></script>
-		<script src="js/events.js"></script>
-		<script src="js/ui.js"></script>
-		<script src="js/pong.js"></script>
+		<script src="js/Model/modelGlobals.js"></script>
+		<script src="js/Model/ball.js"></script>
+		<script src="js/Model/paddleObject.js"></script>
+		<script src="js/Model/paddle.js"></script>
+		<script src="js/Model/opponent.js"></script>
+		<script src="js/Model/collisions.js"></script>
+		<script src="js/Controller/pausing.js"></script>
+		<script src="js/Controller/events.js"></script>
+		<script src="js/View/ui.js"></script>
+		<script src="js/Controller/pong.js"></script>
 	</body>
 </html>
