Use global namespace g.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<script src="js/globals.js"></script>
 		<script src="js/Model/modelGlobals.js"></script>
 		<script src="js/Model/ball.js"></script>
-		<script src="js/Model/paddleObject.js"></script>
 		<script src="js/Model/paddle.js"></script>
+		<script src="js/Model/player.js"></script>
 		<script src="js/Model/opponent.js"></script>
 		<script src="js/Model/collisions.js"></script>
 		<script src="js/Controller/pausing.js"></script>
