Refactor object rendering out.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 		<script src="js/Controller/pausing.js"></script>
 		<script src="js/Controller/events.js"></script>
 		<script src="js/View/ui.js"></script>
+		<script src="js/View/playerUI.js"></script>
+		<script src="js/View/ballUI.js"></script>
+		<script src="js/View/opponentUI.js"></script>
+		<script src="js/View/objectsRenderer.js"></script>
 		<script src="js/Controller/pong.js"></script>
 	</body>
 </html>
