--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<br/>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="js/globals.js"></script>
+		<script src="js/View/uiGlobals.js"></script>
 		<script src="js/Model/modelGlobals.js"></script>
 		<script src="js/Model/ball.js"></script>
 		<script src="js/Model/paddle.js"></script>
@@ -21,6 +22,7 @@
 		<script src="js/Controller/pausing.js"></script>
 		<script src="js/Controller/events.js"></script>
 		<script src="js/View/ui.js"></script>
+		<script src="js/View/uiRenderer.js"></script>
 		<script src="js/View/playerUI.js"></script>
 		<script src="js/View/ballUI.js"></script>
 		<script src="js/View/opponentUI.js"></script>
