Separate audio out.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script src="js/View/ballUI.js"></script>
 		<script src="js/View/opponentUI.js"></script>
 		<script src="js/View/objectsRenderer.js"></script>
+		<script src="js/View/audio.js"></script>
 		<script src="js/Controller/pong.js"></script>
 	</body>
 </html>
