--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <html>
-	<head>
-		<title>Pong</title>
-		<link href="css/pong.css" type="text/css" rel="stylesheet">
-		<link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-	</head>
-	<body>
-		<div id="canvas-container">
-			<canvas id="game-canvas" width="1000" height="600">Your browser does not support HTML5.</canvas>
-		</div>
-		<img id="background-img" src="res/bg.png">
-		<br/>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script src="js/globals.js"></script>
-		<script src="js/View/uiGlobals.js"></script>
-		<script src="js/Model/modelGlobals.js"></script>
-		<script src="js/Model/ball.js"></script>
-		<script src="js/Model/paddle.js"></script>
-		<script src="js/Model/player.js"></script>
-		<script src="js/Model/opponent.js"></script>
-		<script src="js/Model/collisions.js"></script>
-		<script src="js/Controller/pausing.js"></script>
-		<script src="js/Controller/events.js"></script>
-		<script src="js/View/ui.js"></script>
-		<script src="js/View/uiRenderer.js"></script>
-		<script src="js/View/playerUI.js"></script>
-		<script src="js/View/ballUI.js"></script>
-		<script src="js/View/opponentUI.js"></script>
-		<script src="js/View/objectsRenderer.js"></script>
-		<script src="js/View/audio.js"></script>
-		<script src="js/Controller/pong.js"></script>
-	</body>
+  <head>
+    <title>Pong</title>
+    <link href="css/pong.css" type="text/css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <div id="canvas-container">
+      <canvas id="game-canvas" width="1000" height="600">Your browser does not support HTML5.</canvas>
+    </div>
+    <img id="background-img" src="res/bg.png">
+    <br/>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="js/globals.js"></script>
+    <script src="js/View/uiGlobals.js"></script>
+    <script src="js/Model/modelGlobals.js"></script>
+    <script src="js/Model/ball.js"></script>
+    <script src="js/Model/paddle.js"></script>
+    <script src="js/Model/player.js"></script>
+    <script src="js/Model/opponent.js"></script>
+    <script src="js/Model/collisions.js"></script>
+    <script src="js/Model/game.js"></script>
+    <script src="js/Controller/pausing.js"></script>
+    <script src="js/Controller/events.js"></script>
+    <script src="js/View/ui.js"></script>
+    <script src="js/View/uiRenderer.js"></script>
+    <script src="js/View/playerUI.js"></script>
+    <script src="js/View/ballUI.js"></script>
+    <script src="js/View/opponentUI.js"></script>
+    <script src="js/View/objectsRenderer.js"></script>
+    <script src="js/View/audio.js"></script>
+    <script src="js/Controller/pong.js"></script>
+  </body>
 </html>
